add tmux properly

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,62 +1,96 @@
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-# Mouse on
+set -g @plugin_path ~/.tmux/plugins/
+bind r source-file ~/.tmux.conf
+# -------------- KEY BINDINGS --------------
+# Change default prefix to C-a
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+# Switch panes with | - 
 unbind %
 bind | split-window -h 
 unbind r
-bind r source-file ~/.tmux.conf
+unbind o # For sessionx
+unbind '"'
+bind - split-window -v
 
+# Resize sizes
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
-#bind-key -n C-Space next-session  
-#bind-key -n C-S-ISO_Left_Tab previous-session 
 bind -r m resize-pane -Z
-unbind '"'
-bind - split-window -v
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @yank_selection_mouse 'clipboard'
-set -g mouse on
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
-# To copy, left click and drag to highlight text in yellow, 
-# once you release left click yellow text will disappear and will automatically be available in clibboard
-# # Use vim keybindings in copy mode
-setw -g mode-keys vi
-# Update default binding of `Enter` to also use copy-pipe
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
-#bind -n C-w kill-window  
-# Switch keys
-# switch panes using Alt-arrow without prefix
-#bind -n M-Left select-pane -L
-#bind -n M-Right select-pane -R
-#bind -n M-Up select-pane -U
-#bind -n M-Down select-pane -D
+# Switch panes with C-hjkl
 bind -n C-h select-pane -L  
 bind -n C-j select-pane -D  
 bind -n C-k select-pane -U  
 bind -n C-l select-pane -R  
-# Windows at 1
+
+# Key bindings to make tmux work like vim
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
+# ----------------- SETTINGS -----------------
+setw -g mode-keys vi
+set -g @yank_selection_mouse 'clipboard'
+set -g mouse on
+set -g status-position top       
 set -g base-index 1
 set -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
+set -g detach-on-destroy off    
+set -g escape-time 0            
+set -g history-limit 1000000    
+set -g renumber-windows on      
+set -g set-clipboard on        
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
+# ----------------- PLUGINS -----------------
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'omerxx/catppuccin-tmux' 
+set -g @plugin 'omerxx/tmux-sessionx'
+# Try 
+set -g @plugin 'thuantanphamfilms/tmux-fzf-session-switch'
+# set -g @plugin 'noscript/tmux-mighty-scroll'
+# Plugin settings
+set -g @sessionx-bind 'o'
+set -g @sessionx-window-height '85%'
+set -g @sessionx-window-width '75%'
+set -g @sessionx-zoxide-mode 'on'
+set -g @sessionx-filter-current 'false'
+set -g @sessionx-preview-enabled 'true'
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
+set -g @catppuccin_status_modules_right "directory meetings date_time"
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{b:pane_current_path}"
+set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
+set -g @catppuccin_date_time_text "%H:%M"
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
