add latest changes

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,5 +1,7 @@
-set -g @plugin_path ~/.tmux/plugins/
-bind r source-file ~/.tmux.conf
+set -g @plugin_path ~/.tmux/plugins
+# set -g @plugin_path ~/plugins
+bind r source-file ~/.tmux/.tmux.conf
+# bind r source-file ~/.tmux.conf
 # -------------- KEY BINDINGS --------------
 # Change default prefix to C-a
 set -g prefix C-a
@@ -22,11 +24,15 @@ bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
 
 # Switch panes with C-hjkl
+bind -n M-h select-pane -L  
+bind -n M-j select-pane -D  
+bind -n M-k select-pane -U  
+bind -n M-l select-pane -R  
+
 bind -n C-h select-pane -L  
 bind -n C-j select-pane -D  
 bind -n C-k select-pane -U  
 bind -n C-l select-pane -R  
-
 # Key bindings to make tmux work like vim
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
@@ -59,8 +65,10 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'omerxx/catppuccin-tmux' 
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 # Try 
-set -g @plugin 'thuantanphamfilms/tmux-fzf-session-switch'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+# set -g @plugin 'thuantanphamfilms/tmux-fzf-session-switch'
 # set -g @plugin 'noscript/tmux-mighty-scroll'
 # Plugin settings
 set -g @sessionx-bind 'o'
