--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -40,7 +40,7 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
-
+# bind-key -n C-g-h send-keys C-g h
 # ----------------- SETTINGS -----------------
 setw -g mode-keys vi
 set -g @yank_selection_mouse 'clipboard'
@@ -67,7 +67,6 @@ set -g @plugin 'omerxx/catppuccin-tmux'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # Try 
-set -g @plugin 'tmux-plugins/tmux-sessionist'
 # set -g @plugin 'thuantanphamfilms/tmux-fzf-session-switch'
 # set -g @plugin 'noscript/tmux-mighty-scroll'
 # Plugin settings
