add more changes

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -55,16 +55,27 @@ set -g renumber-windows on
 set -g set-clipboard on        
 
 # ----------------- PLUGINS -----------------
+# tpm = plugin manager
 set -g @plugin 'tmux-plugins/tpm'
+# sensible = default settings for tmux for easiness of access 
 set -g @plugin 'tmux-plugins/tmux-sensible'
+# Yank = easiness to yank with prefix+y what i've written
 set -g @plugin 'tmux-plugins/tmux-yank'
+# Resurrect = save tmux sessions
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+# Continuum = auto save tmux sessions and pick up where you left of
 set -g @plugin 'tmux-plugins/tmux-continuum'
+# Thumbs = press prefix + space to find teach in terminal that matches important stuff
 set -g @plugin 'fcsonline/tmux-thumbs'
+# Fzf = fuzzy finder for tmux
 set -g @plugin 'sainnhe/tmux-fzf'
+# Fzf url = open urls in tmux with fzf
 set -g @plugin 'wfxr/tmux-fzf-url'
+# Catppuccino = a theme for tmux
 set -g @plugin 'omerxx/catppuccin-tmux' 
+# Session-x is the prefix+o that allows you to switch between sessions
 set -g @plugin 'omerxx/tmux-sessionx'
+# Navigator: switch between vim and tmux panes
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # Try 
 # set -g @plugin 'thuantanphamfilms/tmux-fzf-session-switch'
