nvim add debug, venv_selector by default, and update scripts

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -154,7 +154,7 @@ set-option -g status-right-style default
 # Change the color of the INACTIVE tmux panes
 set-option -a terminal-features 'xterm-256color:RGB'
 setw -g window-style 'bg=colour236'
-# setw -g window-active-style ',bg=#313244'
+setw -g window-active-style ',bg=#313244'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
