add vimtex, change zshrc/tmux, improve lua snip, add option to copy uuids

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -22,7 +22,7 @@ bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
-
+bind-key Tab switch-client -l
 ## Switch panes with C-hjkl or Alt-hjkl
 ## a) (default mode)
 # bind -n M-h select-pane -L  
