create the nautilus, H to open buffers, minor changes to yazi

--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -81,7 +81,8 @@ suppress_preload = false
 [plugin]
 
 preloaders = [
-	{ name = "*", cond = "!mime", run = "mime", multi = true, prio = "high" },
+    # Commented-out line below because issue with `mime` condition
+	# { name = "*", cond = "!mime", run = "mime", multi = true, prio = "high" },
 	# Image
 	{ mime = "image/*", run = "image" },
 	# Video
