--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -16,6 +16,7 @@ unbind t # Who the fuck needs a clock
 bind p paste-buffer
 bind - split-window -v
 bind | split-window -h 
+bind v copy-mode
 # Resize sizes
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
@@ -63,7 +64,7 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 unbind -T copy-mode-vi Enter
 # Bind 'v' to enter copy mode and start selection
-bind v copy-mode \; send -X begin-selection
+bind V copy-mode \; send -X begin-selection
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 set -g @yank_selection_mouse 'clipboard'
