--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -23,6 +23,7 @@ bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
+bind o last-window
 bind-key Tab switch-client -l
 ## Switch panes with C-hjkl or Alt-hjkl
 ## a) (default mode)
@@ -109,8 +110,8 @@ set -g @plugin 'omerxx/catppuccin-tmux'
 # Dependencies of catppuccin
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
-# Session-x is the prefix+o that allows you to switch between sessions
-set -g @plugin 'omerxx/tmux-sessionx'
+# # Session-x is the prefix+o that allows you to switch between sessions
+# set -g @plugin 'omerxx/tmux-sessionx'
 # Navigator: switch between vim and tmux panes
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # Fuzzy seach with c-a + f
@@ -129,11 +130,6 @@ set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
 set -g @catppuccin_window_number_position "right"
-# TODO: decide
-# set -g @catppuccin_window_default_color "#4c71cf"
-# set -g @catppuccin_window_current_color "#{thm_red}" # text color
-# set -g @catppuccin_pane_active_border_style "fg=#{thm_orange}"
-# set -g @catppuccin_window_default_color "#{thm_blue}"
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
