--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -142,10 +142,13 @@ keymap = [
 
 	# Goto
 	{ on = [ "g", "h" ],       run = "cd ~",             desc = "Go ~" },
-	{ on = [ "g", "c" ],       run = "cd ~/.config",     desc = "Go ~/.config " },
+	{ on = [ "g", "c", "o" ],       run = "cd ~/.config",     desc = "Go ~/.config " },
 	{ on = [ "g", "d" ],       run = "cd ~/Downloads",   desc = "Go Downloads" },
 	{ on = [ "g", "." ],       run = "cd ~/dotenv",      desc = "Go ~/dotenv/" },
-	{ on = [ "g", "s" ],       run = "cd /.local/share",          desc = "Go to the .local/share directory" },
+	{ on = [ "g", "s", "h" ],       run = "cd /.local/share",          desc = "Go to the .local/share directory" },
+	{ on = [ "g", "s", "t" ],       run = "cd /.local/state",          desc = "Go to the .local/state directory" },
+	{ on = [ "g", "l"],       run = "cd /.local",          desc = "Go to the .local directory" },
+	{ on = [ "g", "c", "a"],       run = "cd /.cache",          desc = "Go to the .cache directory" },
     # Local only for my projects
 	{ on = [ "g", "e" ],       run = "cd ~/Documents/eth/eth-cas/",      desc = "Go CAS-ETH" },
 	{ on = [ "g", "b", "b" ],  run = "cd ~/python/bkw/ai-tools/ai-lib/ai-backend2/",      desc = "Go backend (BKW)" },
