--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -8,7 +8,7 @@ sort_by        = "alphabetical"
 sort_sensitive = false
 sort_reverse   = false
 sort_dir_first = true
-linemode       = "mtime"
+linemode       = "mtimev2"
 show_hidden    = true
 show_symlink   = true
 scrolloff      = 5
