--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -147,6 +147,10 @@ set -g @catppuccin_date_time_text "%H:%M"
 set -g @resurrect-strategy-nvim 'session'
 set-option -g status-right-length 140
 set-option -g status-right-style default
+# For yazi
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 # set-option -g status-right "#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) "
 # Change the color of the INACTIVE tmux panes
 set-option -a terminal-features 'xterm-256color:RGB'
