--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -90,27 +90,56 @@ preloaders = [
 	# PDF
 	{ mime = "application/pdf", run = "pdf" },
 ]
+# previewers = [
+# 	{ name = "*/", run = "folder", sync = true },
+# 	# Code
+# 	{ mime = "text/*", run = "code" },
+# 	{ mime = "*/{xml,javascript,x-wine-extension-ini}", run = "code" },
+# 	# JSON
+# 	{ mime = "application/json", run = "json" },
+# 	# Image
+# 	{ mime = "image/vnd.djvu", run = "noop" },
+# 	{ mime = "image/*",        run = "image" },
+# 	# Video
+# 	{ mime = "video/*", run = "video" },
+# 	# PDF
+# 	{ mime = "application/pdf", run = "pdf" },
+# 	# Archive
+# 	{ mime = "application/*zip", run = "archive" },
+# 	{ mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", run = "archive" },
+# 	# Fallback
+# 	{ name = "*", run = "file" },
+# ]
 previewers = [
 	{ name = "*/", run = "folder", sync = true },
 	# Code
 	{ mime = "text/*", run = "code" },
-	{ mime = "*/{xml,javascript,x-wine-extension-ini}", run = "code" },
+	{ mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
 	# JSON
-	{ mime = "application/json", run = "json" },
+	{ mime = "application/{json,ndjson}", run = "json" },
 	# Image
-	{ mime = "image/vnd.djvu", run = "noop" },
-	{ mime = "image/*",        run = "image" },
+	{ mime = "image/{avif,hei?,jxl,svg+xml}", run = "magick" },
+	{ mime = "image/*", run = "image" },
 	# Video
 	{ mime = "video/*", run = "video" },
 	# PDF
 	{ mime = "application/pdf", run = "pdf" },
 	# Archive
-	{ mime = "application/*zip", run = "archive" },
-	{ mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", run = "archive" },
+	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", run = "archive" },
+	{ mime = "application/{debian*-package,redhat-package-manager,rpm,android.package-archive}", run = "archive" },
+	{ name = "*.{AppImage,appimage}", run = "archive" },
+	# Virtual Disk / Disk Image
+	{ mime = "application/{iso9660-image,qemu-disk,ms-wim,apple-diskimage}", run = "archive" },
+	{ mime = "application/virtualbox-{vhd,vhdx}", run = "archive" },
+	{ name = "*.{img,fat,ext,ext2,ext3,ext4,squashfs,ntfs,hfs,hfsx}", run = "archive" },
+	# Font
+	{ mime = "font/*", run = "font" },
+	{ mime = "application/ms-opentype", run = "font" },
+	# Empty file
+	{ mime = "inode/empty", run = "empty" },
 	# Fallback
 	{ name = "*", run = "file" },
 ]
-
 [input]
 # cd
 cd_title  = "Change directory:"
