--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -91,7 +91,7 @@ set -g @plugin 'tmux-plugins/tpm'
 # sensible = default settings for tmux for easiness of access 
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # Yank = easiness to yank with prefix+y what i've written
-set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-yank'
 # Resurrect = save tmux sessions
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Continuum = auto save tmux sessions and pick up where you left of
@@ -109,7 +109,7 @@ set -g @plugin 'omerxx/catppuccin-tmux'
 # set -g @plugin 'catppuccin/tmux'
 # Dependencies of catppuccin
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-battery'
+# set -g @plugin 'tmux-plugins/tmux-battery'
 # # Session-x is the prefix+o that allows you to switch between sessions
 # set -g @plugin 'omerxx/tmux-sessionx'
 # Navigator: switch between vim and tmux panes
