update the obsidian, ufo, gp (to have environmental variables

--- a/.zshrc_secrets.example
+++ b/.zshrc_secrets.example
@@ -1,7 +1,7 @@
 export HIVE_PI_USER=...(poetry..work)
 export HIVE_PI_PASSWORD=...(poetry..work)
-export AZURE_OPENAI_ENDPOINT=...(nvim..gp)
-export AZURE_OPENAI_KEY=...(nvim..gp)
+export _AZURE_OPENAI_ENDPOINT=...(nvim..gp)
+export _AZURE_OPENAI_KEY=...(nvim..gp)
 # export STORAGE_ACCOUNT=...
 # export STORAGE_USERNAME=..
 # export STORAGE_SECRET=...
