--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -15,3 +15,8 @@ italic_font      Victor Mono Medium Italic
 bold_italic_font Victor Mono Bold Italic
 
 font_size 12
+
+map alt+. next_tab
+map alt+, previous_tab
+map alt+; new_tab
+map alt+: new_tab_with_cwd
