try new tmux command?

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,3 +1,9 @@
+# Initialize TMUX plugin manager path
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.config/tmux/plugins"
+
+# TPM initialization
+run -b "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
+ 
 set -g @plugin_path ~/.tmux/plugins
 bind r source-file ~/.tmux/.tmux.conf
 # -------------- KEY BINDINGS --------------
