--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,5 +1,5 @@
 # Initialize TMUX plugin manager path
-set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.config/tmux/plugins"
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins"
 
 # TPM initialization
 run -b "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
