--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker:foldlevel=0
 # To reload config, press cmd+ctrl+,
-#: Fonts {{{
+j#: Fonts {{{
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -15,8 +15,17 @@ italic_font      Victor Mono Medium Italic
 bold_italic_font Victor Mono Bold Italic
 
 font_size 12
+kitty_mod ctrl+shift
 
 map alt+. next_tab
 map alt+, previous_tab
 map alt+; new_tab
 map alt+: new_tab_with_cwd
+
+enabled_layouts tall:bias=50;full_size=1;mirrored=false
+map alt+' launch --location=split --type=window --cwd=current
+
+map kitty_mod+h neighboring_window left
+map kitty_mod+l neighboring_window right
+map kitty_mod+k neighboring_window up
+map kitty_mod+j neighboring_window down
