feat: follow same structure yazi, small configs for setup, change lazygit

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -114,10 +114,9 @@ set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'omerxx/catppuccin-tmux' 
 # set -g @plugin 'catppuccin/tmux'
 # Dependencies of catppuccin
-set -g @plugin 'tmux-plugins/tmux-cpu'
-# set -g @plugin 'tmux-plugins/tmux-battery'
-# # Session-x is the prefix+o that allows you to switch between sessions
-# set -g @plugin 'omerxx/tmux-sessionx'
+# set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'gmoe/tmux-wifi'
 # Navigator: switch between vim and tmux panes
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # Fuzzy seach with c-a + f
@@ -140,7 +139,7 @@ set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-set -g @catppuccin_status_modules_right "directory cpu battery date_time"
+set -g @catppuccin_status_modules_right "battery date_time"
 set -g @catppuccin_status_modules_left "session"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator " "
