--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,22 +9,34 @@ j#: Fonts {{{
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-font_family      Victor Mono Medium
-bold_font        Victor Mono Bold
-italic_font      Victor Mono Medium Italic
-bold_italic_font Victor Mono Bold Italic
+font_family      JetBrainsMono Nerd Font Mono
+bold_font        JetBrainsMono Nerd Font Mono Extra Bold
+italic_font      JetBrainsMono Nerd Font Mono Extra Italic
+bold_italic_font JetBrainsMono Nerd Font Mono Extra Bold Italic
 
+symbol_map U+E0A0-U+E0A2 JetBrainsMono Nerd Font Mono
+fallback_family JetBrainsMono Nerd Font Mono
 font_size 12
+#
+#TBD colors
+cursor #FF00FF 
+# cursor #cccccc
+# cursor_text_color #111111
+# cursor_shape block
+
+# remove the stupid ligatures
+disable_ligatures always
+enabled_layouts tall:bias=50;full_size=1;mirrored=false
+
+# Mod
 kitty_mod ctrl+shift
 
+# Window managemenent
 map alt+. next_tab
 map alt+, previous_tab
 map alt+; new_tab
 map alt+: new_tab_with_cwd
-
-enabled_layouts tall:bias=50;full_size=1;mirrored=false
 map alt+' launch --location=split --type=window --cwd=current
-
 map kitty_mod+h neighboring_window left
 map kitty_mod+l neighboring_window right
 map kitty_mod+k neighboring_window up
