feat: enable kitty scrollback with alt+[ through the help of nvim

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -27,7 +27,6 @@ cursor #FF00FF
 # remove the stupid ligatures
 disable_ligatures always
 enabled_layouts tall:bias=50;full_size=1;mirrored=false
-
 # Mod
 kitty_mod ctrl+shift
 
@@ -41,3 +40,9 @@ map kitty_mod+h neighboring_window left
 map kitty_mod+l neighboring_window right
 map kitty_mod+k neighboring_window up
 map kitty_mod+j neighboring_window down
+
+# Scrollback
+map shift+alt+[ launch --stdin-source=@screen_scrollback --stdin-add-formatting less +G -R
+scrollback_pager nvim +"source /home/xouzoura/.config/kitty/vi-mode.lua"
+# scrollback_pager nvim +"source $HOME/.config/kitty/vi-mode.lua"
+map alt+[ show_scrollback
