feat: let's not change again the dotenv shall we :)

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,6 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker:foldlevel=0
 # To reload config, press cmd+ctrl+,
-j#: Fonts {{{
-
+#: Fonts {{{
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
 #: list-fonts` command. By default they are derived automatically, by
@@ -24,11 +23,13 @@ cursor #FF00FF
 # cursor_text_color #111111
 # cursor_shape block
 
-# remove the stupid ligatures
-disable_ligatures always
-enabled_layouts tall:bias=50;full_size=1;mirrored=false
 # Mod
 kitty_mod ctrl+shift
+
+# General
+scrollback_lines 10000
+enabled_layouts tall:bias=50;full_size=1;mirrored=false
+disable_ligatures always
 
 # Window managemenent
 map alt+. next_tab
@@ -41,8 +42,8 @@ map kitty_mod+l neighboring_window right
 map kitty_mod+k neighboring_window up
 map kitty_mod+j neighboring_window down
 
-# Scrollback
+# Scrollback 
 map shift+alt+[ launch --stdin-source=@screen_scrollback --stdin-add-formatting less +G -R
-scrollback_pager nvim +"source /home/xouzoura/.config/kitty/vi-mode.lua"
-# scrollback_pager nvim +"source $HOME/.config/kitty/vi-mode.lua"
+map shift+alt+f launch --type=overlay --stdin-source=@screen_scrollback sh -c '$HOME/.fzf/bin/fzf --no-sort --no-mouse --exact -i | wl-copy'
+scrollback_pager nvim +"source $HOME/.config/kitty/vi-mode.lua"
 map alt+[ show_scrollback
