--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -37,10 +37,10 @@ map alt+, previous_tab
 map alt+; new_tab
 map alt+: new_tab_with_cwd
 map alt+' launch --location=split --type=window --cwd=current
-map kitty_mod+h neighboring_window left
-map kitty_mod+l neighboring_window right
-map kitty_mod+k neighboring_window up
-map kitty_mod+j neighboring_window down
+map shift+alt+h neighboring_window left
+map shift+alt+l neighboring_window right
+map shift+alt+k neighboring_window up
+map shift+alt+j neighboring_window down
 
 # Scrollback 
 map shift+alt+[ launch --stdin-source=@screen_scrollback --stdin-add-formatting less +G -R
