fix: issue with setup and improve config of kitty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -41,6 +41,11 @@ map shift+alt+h neighboring_window left
 map shift+alt+l neighboring_window right
 map shift+alt+k neighboring_window up
 map shift+alt+j neighboring_window down
+map shift+alt+o nth_window -1
+# Can't make this work ;(
+# map shift+alt+z goto_layout stack
+# map shift+alt+x goto_layout tall
+# map `>a goto_layout tall
 
 # Scrollback 
 map shift+alt+[ launch --stdin-source=@screen_scrollback --stdin-add-formatting less +G -R
