--- a/.zshrc_secrets.example
+++ b/.zshrc_secrets.example
@@ -2,6 +2,7 @@ export HIVE_PI_USER=...(poetry..work)
 export HIVE_PI_PASSWORD=...(poetry..work)
 export _AZURE_OPENAI_ENDPOINT=...(nvim..gp)
 export _AZURE_OPENAI_KEY=...(nvim..gp)
+export PPLX_API_KEY=...(nvim..gp)
 # export STORAGE_ACCOUNT=...
 # export STORAGE_USERNAME=..
 # export STORAGE_SECRET=...
