--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -37,11 +37,11 @@ map alt+, previous_tab
 map alt+; new_tab
 map alt+: new_tab_with_cwd
 map alt+' launch --location=split --type=window --cwd=current
-map shift+alt+h neighboring_window left
-map shift+alt+l neighboring_window right
-map shift+alt+k neighboring_window up
-map shift+alt+j neighboring_window down
-map shift+alt+o nth_window -1
+map ctrl+alt+h neighboring_window left
+map ctrl+alt+l neighboring_window right
+map ctrl+alt+k neighboring_window up
+map ctrl+alt+j neighboring_window down
+map ctrl+alt+o nth_window -1
 # Can't make this work ;(
 # map shift+alt+z goto_layout stack
 # map shift+alt+x goto_layout tall
